--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,12 @@
 body {
   font-family: "Pretendard", sans-serif;
 }
+
+@keyframes shimmer {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
