--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,21 @@ body {
     transform: translateX(100%);
   }
 }
+
+.scrollbar {
+  overflow-y: scroll;
+}
+
+/* 스크롤바의 폭 너비 */
+.scrollbar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #418bc4; /* 스크롤바 색상 */
+  border-radius: 10px; /* 스크롤바 둥근 테두리 */
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  background: rgba(220, 20, 60, 0.1); /*스크롤바 뒷 배경 색상*/
+}
