feat(Header): 모바일 햄버거 메뉴 구현

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,24 @@ body {
   }
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 .scrollbar {
   overflow-y: scroll;
 }
